@startuml

title __STRUCTURE's Class Diagram__\n

  namespace structure {
      class structure.Coordinate {
          - x : int
          - y : int
          + Coordinate()
          + equals()
      }
      class structure.Maze {
          - alivePills : int
          - alivePowerPills : int
          - fruitList : ArrayList<ImageIcon>
          - gameStart : long
          - maze : char[][]
          + Maze()
          + addPill()
          + addPowerPill()
          + chooseFruit()
          + getFruit()
          + initializeMaze()
          + removeAlivePill()
          + removeAlivePowerPill()
          + setGameStart()
          + setRedPortal()
      }
      class structure.MazeManager {
          {static} - maze : Maze
          {static} + canIMove()
          {static} + checkEmpty()
          {static} + convertCoords()
          {static} + createMaze()
          {static} + getObjCoord()
          {static} + populateMaze()
          {static} + whichBlock()
      }
    }
  

  structure.Maze o-- sprites.Portal : bluePortal / redPortal
  structure.Maze o-- sprites.Pill : pills
  structure.Maze o-- sprites.PowerPill : powerPills
  structure.Maze o-- sprites.Fruit : fruit



@enduml
